syntax = "proto3";

option go_package = "document-generators-infrastructure-repositories-contracts";

package Edm.DocumentGenerators.Infrastructure.Repositories.Contracts;

option csharp_namespace = "Edm.DocumentGenerators.Infrastructure.Repositories.Contracts";

import "Repositories/Documents/Contracts/Data/ApprovalData/Workflows/Statuses/document_approval_workflow_status.proto";

message DocumentApprovalWorkflowDb {
  string id = 1;
  DocumentApprovalWorkflowStatusDb status = 2;
}
